--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -19,7 +19,7 @@ my favorite <a href="{{ site.mirror }}{{ page.docfolder }}/TerminalVsShell.html"
 
 <p>ConEmu is an active project, open to <a href="{{ site.mirror }}{{ page.docfolder }}/Issues.html">suggestions</a>. </p>
 
-<p><a href="{{ site.fosshub }}" rel="nofollow"><img src="/img/Downloads.png" alt="Download ConEmu" title="Download ConEmu"></img></a></p>
+<p>{% include download.html %}</p>
 
 <p>Take a look at <a href="{{ site.mirror }}{{ page.docfolder }}/Screencasts.html">screencasts</a> about ConEmu. </p>
 
