--- a/_includes/index_ru.html
+++ b/_includes/index_ru.html
@@ -4,7 +4,7 @@
 
 			<p>ConEmu-Maximus5 это &laquo;графический хост&raquo; для консольных приложений Windows.<br />
 			При запуске нового консольного приложения в ConEmu реальное окно консоли не отображается, а весь вывод и ввод перехватывается и перенаправляется в ConEmu. Основное назначение - совместное использование с <a href="http://en.wikipedia.org/wiki/FAR_Manager">Far Manager</a>. Но в ConEmu можно запускать и другие приложения: cmd, powershell, dn, putty, notepad, и т.п.</p>
-			<a href="{{ site.fosshub }}"><img alt="Скачать ConEmu" src="/img/Downloads.png" title="Загрузить ConEmu" /></a>
+			{% include download.html %}
 
 			<p><a href="/ru/Screencasts.html">Несколько видеороликов</a> - кратко о возможностях ConEmu.</p>
 			&nbsp;
