--- a/_includes/blog_navigation.html
+++ b/_includes/blog_navigation.html
@@ -16,4 +16,4 @@ The oldest build
 
 {% include download.html %}
 
-{% if site.url != 'local' %}{% include googleads.html %}{% endif %}
+{% if site.url != 'local' %}{% include in_article.html %}{% endif %}
