Add TerminalModes article

--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -26,7 +26,7 @@ my favorite <a href="{{ site.mirror }}{{ page.docfolder }}/TerminalVsShell.html"
 <p><img alt="ConEmu screenshot" src="/img/ConEmu-Maximus5.png"></p>
 
 
-{% if site.url != 'local' %}{% include in_article.html %}{% endif %}
+{% include in_article.html %}
 
 
 <h2 id="Disclaimer"> Disclaimer </h2>
