--- a/_includes/index_ru.html
+++ b/_includes/index_ru.html
@@ -11,7 +11,7 @@
 
 			<p><img alt="ConEmu screenshot" src="/img/ConEmu-Maximus5.png"></p>
 
-{% if site.url != 'local' %}{% include in_article.html %}{% endif %}
+{% include in_article.html %}
 
 <h2>Бонусы, которые получает пользователь</h2>
 
