Fix AttachDialog screenshot

--- a/_includes/in_side.html
+++ b/_includes/in_side.html
@@ -1,3 +1,4 @@
+{% comment %}
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- in_side -->
 <ins class="adsbygoogle"
@@ -9,3 +10,4 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+{% endcomment %}
