--- a/_includes/in_article.html
+++ b/_includes/in_article.html
@@ -1,3 +1,4 @@
+{% comment %}
 {% if site.url != 'local' %}
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
@@ -10,3 +11,4 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 {% endif %}
+{% endcomment %}
