--- a/_includes/index_en.html
+++ b/_includes/index_en.html
@@ -101,7 +101,10 @@ Most settings are configured using the Settings dialog, not from the command lin
 
 <h2 id="Requirements"> Requirements </h2>
 
-<ul><li>Windows 2000 or later. </li></ul>
+<ul>
+	<li>Windows XP or later for 32-bit. </li>
+	<li>Windows Vista or later for 64-bit. </li>
+</ul>
 
 
 <h2 id="Installation"> Installation </h2>
