--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -9,7 +9,7 @@
   "screenshot": "{{ site.url }}/img/ConEmu-Maximus5.png",
   "applicationCategory": "Terminal",
   "operatingSystem": "Windows",
-  "requirements": "Windows 2000",
+  "requirements": "Windows XP",
   "license": "http://opensource.org/licenses/BSD-3-Clause",
   "aggregateRating": {
     "@type": "AggregateRating",
@@ -23,13 +23,13 @@
   },
   "sameAs": [ "https://twitter.com/ConEmuMaximus5",
     "https://www.facebook.com/ConEmu.Maximus5",
-    "https://plus.google.com/116287257743594353797",
     "http://conemu.tumblr.com/" ],
   "author": {
     "@type": "Person",
-    "name": "Maximus5",
+    "name": "Maksim Moisiuk",
     "image": "{{ site.url }}/img/logo.png",
-    "sameAs": "https://twitter.com/ConEmuMaximus5"
+    "sameAs": [ "https://twitter.com/ConEmuMaximus5",
+      "https://www.linkedin.com/in/maksimmoisiuk/" ]
   }
 }
 </script>
