Update domain to yoomoney

--- a/_includes/donate_en.html
+++ b/_includes/donate_en.html
@@ -27,8 +27,8 @@ or anything else, spreading the word for example. </p>
      src="../img/donate-paypal.png" alt="PayPal"></a>
 </td>
 <td colspan="2">
-  <a href="https://money.yandex.ru/to/410011983971991" target="_blank"><img
-     src="../img/donate-ymoney.png" alt="Yandex.Money"></a>
+  <a href="https://yoomoney.ru/to/410011983971991" target="_blank"><img
+     src="../img/donate-ymoney.png" alt="Yoo.Money"></a>
 </td>
 </tr>
 <tr>
