--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -27,8 +27,8 @@
      src="../img/donate-paypal.png" alt="PayPal"></a>
 </td>
 <td colspan="2">
-  <a href="https://money.yandex.ru/to/410011983971991" target="_blank"><img
-     src="../img/donate-ymoney-ru.png" alt="Яндекс.Деньги"></a>
+  <a href="https://yoomoney.ru/to/410011983971991" target="_blank"><img
+     src="../img/donate-ymoney.png" alt="ЮMoney"></a>
 </td>
 </tr>
 <tr>
