--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -26,10 +26,11 @@
   <a href="https://paypal.me/conemu/5" target="_blank"><img
      src="../img/donate-paypal.png" alt="PayPal"></a>
 </td>
-<td colspan="2">
-  <a href="https://yoomoney.ru/to/410011983971991" target="_blank"><img
-     src="../img/donate-ymoney.png" alt="ЮMoney"></a>
+<td>
+  <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development" target="_blank"><img
+     src="../img/donate-bitcoin.png" alt="Bitcoin (BTC)" title="Bitcoin (BTC)"></a>
 </td>
+<td>BTC: 1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</td>
 </tr>
 <tr>
 <td>
@@ -37,46 +38,6 @@
      src="../img/donate-github.png" alt="GitHub sponsors"></a>
 </td>
 <td><a href="https://github.com/sponsors/Maximus5" target="_blank">Стать спонсором на GitHub</a></td>
-<td>
-  <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development" target="_blank"><img
-     src="../img/donate-bitcoin.png" alt="Bitcoin (BTC)" title="Bitcoin (BTC)"></a>
-</td>
-<td>BTC: 1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</td>
 </tr>
+<td colspan="2">&nbsp;</td>
 </table>
-
-
-
-{% comment %}
-
-<h3 id="paypal"> PayPal </h3>
-<div class="text"><a href="https://paypal.me/conemu/5" target="_blank">PayPal.me/conemu</a></div>
-<div class="text stext">Перевести на PayPal</div>
-
-<h3 id="github"> GitHub sponsors </h3>
-<div class="text"><a href="https://github.com/sponsors/Maximus5" target="_blank">Стать спонсором на GitHub</a></div>
-<div class="text stext">На платформе GitHub можно настроить повторяющиеся пожертвования.</div>
-
-<h3 id="yandex"> Yandex.Money </h3>
-<div class="text">Перевести на Яндекс.Деньги: <a href="https://money.yandex.ru/to/410011983971991" target="_blank">4100 1198 3971 991</a></div>
-<div class="text stext">Работает для России и некоторых стран бывшего СНГ.</div>
-
-<h3 id="amazon"> Amazon gift cards </h3>
-<div class="text"><a href="https://www.amazon.de/dp/B07Q1JNC7R/" target="_blank">Amazon's gift cards</a></div>
-<div class="text stext">Выберите сумму и введите e-mail:<br/>
-<code>ConEmu.Maximus5@gmail.com</code></div>
-
-<h3 id="bitcoin"> Bitcoin (BTC) </h3>
-<div class="text">BTC: <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development">1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</a></div>
-<div class="text stext">Bitcoin (<a href="https://bitcoin.org/en/faq" target="_blank">FAQ</a>) криптовалюта с открытым программным обеспечением</div>
-
-<h3 id="flattr"> Flattr </h3>
-<div class="text"><a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" target="_blank">Микропожертвования через Flattr</a></div>
-<div class="text stext">What is <a href="https://flattr.com/" target="_blank">Flattr</a> и как он работает рассказано
-<a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603" target="_blank">здесь</a></div>
-
-<h3 id="webmoney"> WebMoney </h3>
-<div class="text">Перевести на WebMoney: <code>Z190363130005</code>, <code>E294160643493</code>, <code>R407008788841</code></div>
-<div class="text stext"><a href="http://www.wmtransfer.com/" target="_blank">WebMoney transfer</a></div>
-
-{% endcomment %}
