Add crypto currencies

--- a/_includes/donate_en.html
+++ b/_includes/donate_en.html
@@ -22,22 +22,45 @@ or anything else, spreading the word for example. </p>
 
 <table class="d-table">
 <tr>
-<td colspan="2">
+<td>
   <a href="https://paypal.me/conemu/5" target="_blank"><img
      src="../img/donate-paypal.png" alt="PayPal"></a>
 </td>
-<td>
-  <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development" target="_blank"><img
-     src="../img/donate-bitcoin.png" alt="Bitcoin (BTC)" title="Bitcoin (BTC)"></a>
-</td>
-<td>BTC: 1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</td>
-</tr>
-<tr>
 <td>
   <a href="https://github.com/sponsors/Maximus5" target="_blank"><img
      src="../img/donate-github.png" alt="GitHub sponsors"></a>
 </td>
 <td><a href="https://github.com/sponsors/Maximus5" target="_blank">Become a sponsor on GitHub</a></td>
-<td colspan="2">&nbsp;</td>
+</tr>
+</table>
+
+<h3 id="crypto"> Cryptocurrencies </h2>
+
+<table class="d-table">
+<tr>
+<td>
+  <a href="ethereum:0x68184c28444B2f6AE13B8ebBC64d5925d4408400" target="_blank"><img
+     src="../img/donate-eth.png" alt="Etherium (ETH)" title="Etherium (ETH)"></a>
+</td>
+<td>ETH: 0x0d6e4e457210f4e63ECc7a5dE6F23bcA68BD3029</td>
+</tr>
+<tr>
+<td>
+  <a href="bitcoin:bc1qgrs30pl05qenh4g3kdc6rsm2upa7ys9ysf3j82?message=Support%20ConEmu%20development" target="_blank"><img
+     src="../img/donate-btc.png" alt="Bitcoin (BTC)" title="Bitcoin (BTC)"></a>
+</td>
+<td>BTC: bc1qgrs30pl05qenh4g3kdc6rsm2upa7ys9ysf3j82</td>
+</tr>
+<tr>
+<td>
+  <img src="../img/donate-ltc.png" alt="Litecoin (LTC)" title="Litecoin (LTC)">
+</td>
+<td>LTC: ltc1qz6t7me8rvlvl08cagtmtruh9ktttqsrrgn6thq</td>
+</tr>
+<tr>
+<td>
+  <img src="../img/donate-doge.png" alt="Dogecoin (DOGE)" title="Dogecoin (DOGE)">
+</td>
+<td>DOGE: DTK2QTWjf2cnJdioq3oLr23CMx95qkxSwK</td>
 </tr>
 </table>
