New certificate note

--- a/_includes/donate_en.html
+++ b/_includes/donate_en.html
@@ -3,8 +3,7 @@
 <p>ConEmu-Maximus5 was brought to life and is supported by almost single developer efforts.
 The most valuable resource is time actually, hundreds of hours. But of course there are other expenses,
 minor or considerable: hardware used for developing and testing, digital certificate for signing
-ConEmu binaries (current one was obtained from <a href="http://certum.pl">Certum.pl</a>),
-hosting... </p>
+ConEmu binaries (current one was obtained from Sectigo)... </p>
 
 <p>You can show your appreciation and support
 <a href="/en/RoadMap.html">further development</a>
