--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -5,7 +5,7 @@
 Но, конечно, есть и другие расходы, как незначительные, так и заметные:
 аппаратное и программное обеспечение, используемое для разработки и тестирования,
 цифровой сертификат для подписания исполняемых файлов ConEmu (текущий был выпущен
-<a href="http://certum.pl">Certum.pl</a>), хостинг... </p>
+Sectigo)... </p>
 
 <p>Вы можете поблагодарить и поддержать
 <a href="/en/RoadMap.html">дальнейшую разработку</a>
