Make Github the primary download mirror

--- a/_includes/index_ru.html
+++ b/_includes/index_ru.html
@@ -52,6 +52,6 @@
 
 <h3>Скачать (Download)</h3>
 
-			<p>Последнюю версию ConEmu-Maximus5 можно скачать <a href="{{ site.fosshub }}">здесь</a>.</p>
+			<p>Последнюю версию ConEmu-Maximus5 можно скачать <a href="{{ site.github }}">здесь</a>.</p>
 
 			<p>Документация <a href="{{ site.mirror }}{{ page.docfolder }}/TableOfContents.html">здесь</a>.</p>
